[package]
name = "metro_ticket"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
console = "0.15.5"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
petgraph = { version = "0.6.2", features = ["graphmap", "serde-1"] }
